# hackRare_SolveVDM

./: .gitignore  FEATURES_HOW_BUILT.md  README.md  SEMANTIC_ANALYSIS.md
jacob_folder/floater_demo/: README.md  pyproject.toml
jacob_folder/floater_demo/artifacts/closed_loop/: closed_loop_summary.json
jacob_folder/floater_demo/artifacts/closed_loop/round_00/: confusion.csv  report.json  (+1 more)
jacob_folder/floater_demo/artifacts/closed_loop_eval/: closed_loop_summary.json
jacob_folder/floater_demo/artifacts/closed_loop_eval_demo/: closed_loop_summary.json
jacob_folder/floater_demo/artifacts/synth/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json
jacob_folder/floater_demo/floater_demo/: __init__.py  cli.py  closed_loop.py  config.py  features.py  infer.py  preprocess.py  rules.py  segment.py  supabase_worker.py  synth.py  utils.py  visualize.py
jacob_folder/floater_demo/tests/: test_adversarial_features.py  test_closed_loop_smoke.py  test_overlay_layout.py  test_rules.py  test_smoke.py  test_supabase_worker.py  test_synth_smoke.py
jacob_folder/reddit_scrapping/: README.md  pyproject.toml  requirements.txt
jacob_folder/reddit_scrapping/data/processed/: comment_analysis.csv  post_analysis.csv  theme_summary.json
jacob_folder/reddit_scrapping/data/reports/: quotebook.md  summary.json
jacob_folder/reddit_scrapping/reddit_scrapping/: cli.py  reporting.py
(+2117 files in other folders)
